# porov2

./: Dockerfile  Notebook.ipynb  extract.py  final_df.csv  nixpacks.toml  pyproject.toml
bot/: __init__.py  bot.py
bot/extensions/: league.py
src/: agent.py  extract.py  instructions.txt  tool_schemas.json  tools.py
